# tetruino

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  color.h  debug.h  drawable.h  game.cpp  game.h  main.cpp  matrix.cpp  matrix.h  motions.h  screen_manager.cpp  screen_manager.h  tetromino.cpp  tetromino.h  tetromino_factory.cpp  tetromino_factory.h  tetrominos.h
